versioned_docs/version-2.18/reference/targets/debian_package.mdx
---
title: debian_package
description: |
  &#x22;
---

import Field from "@site/src/components/reference/Field";
import styles from "@site/src/components/reference/styles.module.css";

---

&#x22;
A Debian package containing an artifact.

```
    This will not install the package, only create a .deb file
    that you can then distribute and install, e.g. via dpkg.

    "See https://www.pantsbuild.org/v2.18/docs/debian-package.
```

Backend: <span className="color--primary">`pants.backend.experimental.debian`</span>

---

<span className={styles.options}>

## `tags`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
>

Arbitrary strings to describe a target.

For example, you may tag some test targets with &#x27;integration_test&#x27; so that you could run `pants --tag='integration_test' test ::` to only run on targets with that tag.

</Field>

## `description`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
>

A human-readable description of the target.

Use `pants list --documented ::` to see all targets with descriptions.

</Field>

## `output_path`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
>

Where the built asset should be located.

If undefined, this will use the path to the BUILD file, followed by the target name. For example, `src/python/project:app` would be `src.python.project/app.ext`.

When running `pants package`, this path will be prefixed by `--distdir` (e.g. `dist/`).

Warning: setting this value risks naming collisions with other package targets you may have.

</Field>

## `sources`

<Field
    type_repr={`Iterable[str]`}
    default_repr={`None`}
>

Paths that will be included in the package to be produced such as Debian metadata files. You must include a DEBIAN/control file.

Paths are relative to the BUILD file&#x27;s directory and all paths must belong to the same parent directory. For example, `sources=['dir/**']` is valid, but `sources=['top_level_file.txt']` and `sources=['dir1/*', 'dir2/*']` are not.

</Field>

## `symlinks`

<Field
    type_repr={`Dict[str, str] | None`}
    default_repr={`None`}
>

Symlinks to create for each target being packaged.

For example, you could set symlinks=&#123;&#x27;command-name&#x27;: &#x27;entrypoint-name&#x27;&#125;.

</Field>

## `install_prefix`

<Field
    type_repr={`str | None`}
    default_repr={`'/opt'`}
>

Absolute path to a directory where Debian package will be installed to.

</Field>

## `packages`

<Field
    type_repr={`Iterable[str]`}
    default_repr={`None`}
>

Addresses to any targets that can be built with `pants package`, e.g. `["project:app"]`.

Pants will build the assets as if you had run `pants package`. It will include the results in your Debian package using the same name they would normally have, but without the `--distdir` prefix (e.g. `dist/`).

You can include anything that can be uilt by `pants package`, e.g. a `pex_binary`, a `python_distribution`, or an `archive`.

</Field>

</span>
